--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>2018 Honda Grom</title>
   <link rel="shortcut icon" type="image/png" href="img/Screen Shot 2020-08-18 at 12.23.54 AM.png"> <!--syntax for icon-->
-  <link rel="stylesheet" type="text/css" href="css/style.css"> <!--link CSS file-->
+  <link rel="stylesheet" type="text/css" href="style.css"> <!--link CSS file-->
 </head>
 
 <body>
@@ -34,46 +34,36 @@
       <h3>These are the aftermarket parts I used:</h3>
       <ol>
         <li>
-          <a href="https://www.revzilla.com/motorcycle/yoshimura-rs-2-race-exhaust-system-honda-grom-2017-2019" target="blank">Yoshimura RS-2 Race Exhaust System</a>
-          <div>        
-            <img src="img/yoshi.png" alt="mirror" style="width:100%;">
-          </div>
+          <a href="https://www.revzilla.com/motorcycle/yoshimura-rs-2-race-exhaust-system-honda-grom-2017-2019" target="blank">
+            <img src="img/yoshi.png" alt="mirror" style="width:100%;">Yoshimura RS-2 Race Exhaust System</a>
         </li>
 
-        <br></br>
+        <br><br>
 
         <li>
-          <a href="https://tstindustries.com/tst-led-flushmount-turn-signals-honda-grom.html" target="blank">TST LED Flushmount Turn Signals</a>
-          <div>        
-            <img src="img/flush_lights.jpg" alt="turn signals" style="width:100%;">
-          </div>
+          <a href="https://tstindustries.com/tst-led-flushmount-turn-signals-honda-grom.html" target="blank">
+            <img src="img/flush_lights.jpg" alt="turn signals" style="width:100%;">TST LED Flushmount Turn Signals</a>
         </li>
 
-        <br></br> <!--next update will be having 2 & 3 as a column-->
+        <br><br> <!--next update will be having 2 & 3 as a column-->
 
         <li>
-          <a href="https://tstindustries.com/tst-programmable-sequential-led-integrated-tail-light-honda-grom-2013.html" target="blank">TST LED Integrated Tail Light</a>
-          <div>        
-            <img src="img/tail_light.jpg" alt="tail light" style="width:100%;">
-          </div>
+          <a href="https://tstindustries.com/tst-programmable-sequential-led-integrated-tail-light-honda-grom-2013.html" target="blank">
+            <img src="img/tail_light.jpg" alt="tail light" style="width:100%;">TST LED Integrated Tail Light</a>
         </li>
 
-        <br></br>
+        <br><br>
 
         <li>
-          <a href="https://tstindustries.com/tst-fender-eliminator-for-honda-grom-2017.html" target="blank">TST Fender Eliminator</a>
-          <div>        
-            <img src="img/tst_fender_elem.jpg" alt="mirror" style="width:100%;">
-          </div>
+          <a href="https://tstindustries.com/tst-fender-eliminator-for-honda-grom-2017.html" target="blank">
+            <img src="img/tst_fender_elem.jpg" alt="mirror" style="width:100%;">TST Fender Eliminator</a>
         </li>
 
-        <br></br>
+        <br><br>
 
         <li>
-          <a href="https://www.amazon.com/gp/product/B01MR1ZNCD?pf_rd_r=41R52H7BPXXNZ47TJD8G&pf_rd_p=edaba0ee-c2fe-4124-9f5d-b31d6b1bfbee" target="blank">Universal Motorcycle Mirrors</a>
-          <div>        
-            <img src="img/mirror.jpg" alt="mirror" style="width:100%;">
-          </div>
+          <a href="https://www.amazon.com/gp/product/B01MR1ZNCD?pf_rd_r=41R52H7BPXXNZ47TJD8G&pf_rd_p=edaba0ee-c2fe-4124-9f5d-b31d6b1bfbee" target="blank">
+            <img src="img/mirror.jpg" alt="mirror" style="width:100%;">Universal Motorcycle Mirrors</a>
         </li>
       </ol>
     </div>
